--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* ================================= 
-  Base Styles
+  Base Element Styles
 ==================================== */
 
 * {
@@ -14,7 +14,7 @@ body {
 
 p {
 	font-size: .95em;
-	margin-bottom: 1.5em;
+	margin-bottom: 1.8em;
 }
 
 h2,
@@ -32,22 +32,30 @@ a {
 	text-decoration: none;
 }
 
+img {
+	max-width: 100%;
+}
+
 /* ================================= 
-  Base Layout Styles 
+  Base Layout Styles
 ==================================== */
 
 /* ---- Navigation ---- */
 
 .name {
 	font-size: 1.25em;
+	margin: 0;
 }
 
-.name,
-.main-nav li {
+.main-nav {
+	margin-top: 5px;
+}
+
+.name a,
+.main-nav a {
 	text-align: center;
-	background: #fff;
-	margin-top: 6px;
-	margin-bottom: 6px;
+	display: block;
+	padding: 10px 15px;
 }
 
 .main-nav a {
@@ -60,29 +68,43 @@ a {
 	color: #093a58;
 }
 
-.name a,
-.main-nav a {
-	padding: 10px 15px;
-}
-
 /* ---- Layout Containers ---- */
 
-.container {
-	padding-left: 1em;
-	padding-right: 1em;
-}
-
 .main-header {
-	padding-top: 1.5em;
-	padding-bottom: 1.5em;
-	background: #3acec2;
-	margin-bottom: 30px;
+padding-top: 8px;
+padding-bottom: 8px;
 }
 
+.banner,
 .main-footer {
 	text-align: center;
-	padding: 2em 0;
+}
+
+.banner {
+	color: #fff;
+	background: #3acec2;
+	padding: 30px 0;
+	margin-bottom: 60px;
+}
+/* .col {
+	padding-right: 1em;
+	padding-left: 1em;
+} */
+
+.main-footer {
 	background: #d9e4ea;
+	padding: 2em 0;
+	margin-top: 30px;
+}
+
+/* ---- Page Elements ---- */
+
+.logo {
+	width: 190px;
+}
+
+.headline {
+	margin: 0;
 }
 
 /* ================================= 
@@ -96,24 +118,65 @@ a {
 	}
 
 	.container {
+		width: 90%;
+		max-width: 1024px;
+		margin: 0 auto;
+	}
+
+	.main-nav {
+		float: right;
+	}
+
+	.name,
+	.main-nav li {
+		float: left;
+	}
+
+	.main-nav li {
+		display: inline-block;
+		margin-left: 15px;
+	}
+
+	.tagline {
+		font-size: 1.3em;
+	}
+
+	/* .col {
+		float: left;
+	} 
+
+	.primary {
+		width: 50%;
+	}
+	
+	.secondary {
+		width: 50%;
+	} */
+
+	/* ---- Float clearfix ---- */
+
+	.clearfix::after {
+		content: " ";
+		display: table;
+		clear: both;
+	}
+}
+
+/* @media (min-width: 1025px) {
+
+	.container {
 		width: 80%;
 		max-width: 1150px;
 		margin: 0 auto;
 	}
 
-	.name,
-	.main-nav,
-	.main-nav li {
-		display: inline;
+
+	.primary {
+		width: 40%;
 	}
-
-	.name {
-		width: 240px;
-		margin-right: 50px;
+	
+	.secondary,
+	.tertiary {
+		width: 30%;
 	}
-
-}
-
-
-
-
+} */
