--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
 
 p {
 	font-size: .95em;
-	margin-bottom: 1.8em;
 }
 
 h2,
@@ -34,6 +33,8 @@ a {
 
 img {
 	max-width: 100%;
+	border-radius: 50%;
+	box-shadow: 0 1px 14px rgba(0,0,0, .40);
 }
 
 /* ================================= 
@@ -60,12 +61,12 @@ img {
 
 .main-nav a {
 	font-size: .95em;
-	color: #3acec2;
+	color: #102999;
 	text-transform: uppercase;
 }
 
 .main-nav a:hover {
-	color: #093a58;
+	color: #d3921b;
 }
 
 /* ---- Layout Containers ---- */
@@ -82,9 +83,10 @@ padding-bottom: 8px;
 
 .banner {
 	color: #fff;
-	background: #3acec2;
+	background: #d3921b;
 	padding: 30px 0;
 	margin-bottom: 60px;
+	box-shadow: 0 1px 14px rgba(0,0,0, .40);
 }
 /* .col {
 	padding-right: 1em;
