--- a/css/project.css
+++ b/css/project.css
@@ -2,36 +2,40 @@
   Page Color Styles
 ==================================== */
 
+/* ================================= 
+  Palette
+  Main: #00296B;
+  Secondary: #003F88;
+  Active: #00509D;
+  Text: #FDC500;
+  Text-active: #FFD500;
+==================================== */
+
 body {
 	color: #3a3a3a; /* content text color  */
 }
  
 .mobile-nav {
-	background: #69336e /* background of whole nav  */
+	background: #00296B; /* background of whole nav  */
 }
 
 .other-nav {
-	background: #69336e; /* background of other-nav  */
+	background: #003F88; /* background of other-nav  */
 }
 
 .main-nav a {
-	color: #06070c; /* text color for links in whole nav  */
+	color: #FDC500; /* text color for links in whole nav  */
 	text-transform: uppercase;
 }
 
-.other-nav a:hover {
-	background: #6c4f6e;
-	color: white;
-} /* changes what all links do on hover  */
-
 .copy {
-    color: white;
+    color: #FDC500;
 }
 
-.activelink {
-    background: #6c4f6e;
-    color: white;
-    border-bottom: 3px solid white;
+a.activelink {
+    background: #00509D;
+    color: #FFD500;
+    border-bottom: 3px solid #FFD500;
     padding-bottom: 7px;
 }
 
@@ -82,21 +86,23 @@ body {
 /* ================================= 
 Style changes in media queries
 ==================================== */
-    .other-nav {
-        background: #69336e;
-        z-index: 10;
-    }  /* moves other-nav up to same z-index as mobile-nav and recolors it to match */
+.other-nav {
+    background: #00296B;
+    z-index: 10;
+}  /* moves other-nav up to same z-index as mobile-nav and recolors it to match */
 
-    a.activelink {
-        color: white;
-        border-left: 5px solid white;
-        padding-left: 5px;
-    }
+.other-nav a:hover,
+a.activelink {
+    background: #003F88; /* Used "Secondary" on color palette.  */
+    color: #FFD500;
+} /* changes what all links do on hover  */
 
-    .projects {
-        display: inline-block;
-        padding-bottom: 0;
-    }
+a.activelink {
+    border: none;
+    padding-bottom: 25px;
+    border-left: 5px solid #FFD500;
+    padding-left: 5px;
+}
     
     .box {
         width: 90%;
