--- a/css/blog.css
+++ b/css/blog.css
@@ -23,7 +23,7 @@ body {
 	background: #441F8A; /* background of other-nav  */
 }
 
-.main-nav a {
+nav a {
 	color: #BCDDE5; /* text color for links in whole nav  */
 	text-transform: uppercase;
 }
