--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,14 @@ a {
 
 /* -------------------- Navigation -------------------- */
 
-.main-nav,
+nav,
 .mobile-nav,
-.content {
+main {
 	display: flex;
 } 
 /* The majority of this page is done in flexbox */
 
-.main-nav {
+nav {
 	box-shadow: 0 1px 14px rgba(0,0,0, .40);
 	flex-direction: column;
 	font-weight: bold;
@@ -88,7 +88,7 @@ a {
 }
 /* controls the links in other-nav */
 
-.main-nav a {
+nav a {
 	display: block;
 	margin: 0 auto;
 } /* controls all links in the whole navigation */
@@ -99,7 +99,7 @@ a {
 /* The copyright; is hidden in mobile until I find a better place for it */
 
 /* -------------------- Everything outside of navigation -------------------- */
-.content {
+main {
 	flex-direction: column;
 	flex-wrap: wrap;
 	margin-top: 20px;
@@ -164,7 +164,7 @@ body {
 	background: #444140; /* background of other-nav  */
 }
 
-.main-nav a {
+nav a {
 	color: #E54B4B; /* text color for links in whole nav  */
 	text-transform: uppercase;
 }
@@ -264,7 +264,7 @@ Media Queries
 		justify-items: center;
 	} /* moves copyright/footer info to bottom of sidebar */
 
-	.content {
+	main {
 		padding: 10px 20px;
 		margin-top: 0px;
 		display: block;
