--- a/css/skills.css
+++ b/css/skills.css
@@ -43,41 +43,92 @@ a.activelink {
   Content Style
 ==================================== */
 
-.projects {
-    background: #fff;
+.big {
+    display: flex;
+    flex-direction: row;
+    text-align: left;
     border-radius: .2em;
-    border: solid 1px rgba(88, 183, 205, .2);
-    border-bottom: solid 2px rgba(88, 183, 205, .2);
-    clear: both;
-    padding-bottom: 38px;
-    margin: 5px 4px;
     box-shadow: 0 1px 14px rgba(0,0,0, .40);
+    margin: 20px auto;
 }
 
-.entry {
-    text-align: center;
+.sprite {
+    background: url(../imgs/socialspritesheet.png) no-repeat;
+    min-width: 180px; /* width of container */
+    height: 180px; /* height of container */
 }
 
-.goto,
-.gh {
-    font-size: .78em;
-    border-radius: .3em;
-    padding: .4em 1.8em;
-    color: white;
-    margin: 0 15px;
+.nurse > .sprite {
+    background-position: -410px -290px;
+    border-radius: .2em 0 0 .2em;
 }
 
-.goto {
-    background-color: #102999;
+.dev > .sprite {
+    background-position: -810px -290px;
+    border-radius: .2em 0 0 .2em;
+}
+
+.blender > .sprite {
+    background-position: -610px -290px;
+    border-radius: .2em 0 0 .2em;
+}
+
+.text {
+    display: inline-block;
+    margin: 0 10px;
+} /* placed here again to over ride styling from main style.css */
+
+.head {
     float: left;
-    margin-right: .4em;
+    margin-right: 15px;
+    margin-bottom: 10px;
+} /* placed here again to over ride styling from main style.css */
+
+.smallsocial {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 20px 0;
 }
 
-.gh {
-    background-color: rgba(211, 146, 27, .5);
-    float: right;
-    margin-left: .4em;
+.smallsprite {
+    display: inline-block;
+    background: url(../imgs/socialspritesheet.png) no-repeat;
+    min-width: 80px;
+    height: 80px; 
+}
 
+/* .nurse > .smallsprite {
+    background-position: -10px -490px;
+}
+
+.dev > .smallsprite {
+    background-position: -180px -490px;
+}
+
+.twitter > .smallsprite {
+    background-position: -350px -490px;
+}
+
+.instagram > .smallsprite {
+    background-position: -520px -490px;
+}
+
+.small > h4 {
+    text-align: center;
+    margin: 0;
+} */
+
+@media (min-width: 769px) {
+    .smallicon {
+        width: 180px; 
+        height: 180px; 
+    }
+    .head {
+        float: left;
+        margin-right: 28px;
+        margin-bottom: 20px;
+    }
 }
 
 
