--- a/css/blog.css
+++ b/css/blog.css
@@ -39,7 +39,8 @@ a.activelink {
     padding-bottom: 7px;
 }
 
-.post_head {
+.post_head,
+.form_head {
     background: #3C0D64;
     color: #BCDDE5;
 }
@@ -86,45 +87,79 @@ button:hover {
     padding: 0 20px;
 }
 
+.form_full {
+    display: none;
+    flex-direction: column;
+    box-shadow: 0 1px 14px rgba(0,0,0, .40);
+    margin: 20px 0;
+    border-radius: .2em;
+}
+
+.form_head {
+    display: flex;
+    flex-direction: column;
+    border-radius: .2em .2em 0 0;
+    padding: 15px 20px;
+}
+
+.post_content {
+    padding: 15px 20px;
+}
+
+.form_item {
+    display: flex;
+    flex-direction: column;
+}
+
+.form_item:last-child {
+    padding-top: 15px;
+}
+
+#post_content {
+    width: 100%;
+    height: 100%;
+}
+
+textarea {
+    margin: 10px 0;
+}
 
 @media (min-width: 1025px) { 
 
 /* ================================= 
 Style changes in media queries
 ==================================== */
-.other-nav {
-    background: #3C0D64;
-    z-index: 10;
-}  /* moves other-nav up to same z-index as mobile-nav and recolors it to match */
+    .other-nav {
+        background: #3C0D64;
+        z-index: 10;
+    }  /* moves other-nav up to same z-index as mobile-nav and recolors it to match */
 
-.other-nav a:hover,
-a.activelink {
-    background: #441F8A; /* Used "Secondary" on color palette.  */
-    color: #F1F7F9;
-} /* changes what all links do on hover  */
+    .other-nav a:hover,
+    a.activelink {
+        background: #441F8A; /* Used "Secondary" on color palette.  */
+        color: #F1F7F9;
+    } /* changes what all links do on hover  */
 
-a.activelink {
-    border: none;
-    padding-bottom: 25px;
-    border-left: 5px solid #F1F7F9;
-    padding-left: 5px;
-}
-
-    .projects {
-        display: inline-block;
-        padding-bottom: 0;
-    }
-    
-    .box {
-        width: 90%;
-        margin: auto;
-        text-align: center;
+    a.activelink {
+        border: none;
+        padding-bottom: 25px;
+        border-left: 5px solid #F1F7F9;
+        padding-left: 5px;
     }
 
-    .goto,
-    .gh { 
-        margin: 1em;
-        display: inline-block;
+    .form_head {
+        flex-direction: row;
+        
+        justify-content: space-between;
+    }
+
+    .form_item {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .form_item:last-child {
+        padding-top: 0;
     }
 
 }
