--- a/css/project.css
+++ b/css/project.css
@@ -43,77 +43,84 @@ a.activelink {
   Content Style
 ==================================== */
 
+.box {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+
 .projects {
     background: #fff;
     border-radius: .2em;
     border: solid 1px rgba(88, 183, 205, .2);
     border-bottom: solid 2px rgba(88, 183, 205, .2);
-    clear: both;
-    padding-bottom: 38px;
     margin: 5px 4px;
     box-shadow: 0 1px 14px rgba(0,0,0, .40);
+    display: flex;
+    flex-direction: column;
 }
 
 .entry {
     text-align: center;
 }
 
+.links{
+    display: flex;
+    flex-direction: row;
+    margin: 0px 20px;
+    justify-content: space-between;
+    margin-bottom: 16px;
+}
+
 .goto,
 .gh {
-    font-size: .78em;
-    border-radius: .3em;
-    padding: .4em 1.8em;
-    color: white;
-    margin: 0 15px;
+    padding: 15px;
+    border-radius: .2em;
+    box-shadow: 0 1px 14px rgba(0,0,0, .40);
+    font-weight: bolder;
 }
 
 .goto {
-    background-color: #102999;
-    float: left;
-    margin-right: .4em;
+    background: #00296B;
+    color: #FFD500;
+    border: 3px solid #FFD500;
+    
 }
 
 .gh {
-    background-color: rgba(211, 146, 27, .5);
-    float: right;
-    margin-left: .4em;
-
+    background-color: #00509D;
+    color: #FFD500;
+    border: 3px solid #FFD500;
 }
 
+@media (min-width: 769px) {
+    .other-nav {
+        background: #00296B;
+        z-index: 10;
+    }  /* moves other-nav up to same z-index as mobile-nav and recolors it to match */
+}
 
 @media (min-width: 1025px) { 
 
 /* ================================= 
 Style changes in media queries
 ==================================== */
-.other-nav {
-    background: #00296B;
-    z-index: 10;
-}  /* moves other-nav up to same z-index as mobile-nav and recolors it to match */
+    .other-nav {
+        background: #00296B;
+        z-index: 10;
+    }  /* moves other-nav up to same z-index as mobile-nav and recolors it to match */
 
-.other-nav a:hover,
-a.activelink {
-    background: #003F88; /* Used "Secondary" on color palette.  */
-    color: #FFD500;
-} /* changes what all links do on hover  */
+    .other-nav a:hover,
+    a.activelink {
+        background: #003F88; /* Used "Secondary" on color palette.  */
+        color: #FFD500;
+    } /* changes what all links do on hover  */
 
-a.activelink {
-    border: none;
-    padding-bottom: 25px;
-    border-left: 5px solid #FFD500;
-    padding-left: 5px;
-}
-    
-    .box {
-        width: 90%;
-        margin: auto;
-        text-align: center;
-    }
-
-    .goto,
-    .gh { 
-        margin: 1em;
-        display: inline-block;
+    a.activelink {
+        border: none;
+        padding-bottom: 25px;
+        border-left: 5px solid #FFD500;
+        padding-left: 5px;
     }
 
 }
