--- a/css/randomlink.css
+++ b/css/randomlink.css
@@ -80,16 +80,19 @@ a.activelink {
 
 }
 
+@media (min-width: 769px) {
+    .other-nav {
+        background: #45050C;
+        z-index: 10;
+    }  /* moves other-nav up to same z-index as mobile-nav and recolors it to match */
+}
 
 @media (min-width: 1025px) { 
 
 /* ================================= 
 Style changes in media queries
 ==================================== */
-    .other-nav {
-        background: #45050C;
-        z-index: 10;
-    }  /* moves other-nav up to same z-index as mobile-nav and recolors it to match */
+
 
     .other-nav a:hover,
     a.activelink {
